--- a/Consults.Domain/Consults.Domain.csproj
+++ b/Consults.Domain/Consults.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Consultation.Domain.Shared\Consultation.Domain.Shared.csproj" />
+      <ProjectReference Include="..\Consults.Domain.Shared\Consults.Domain.Shared.csproj" />
     </ItemGroup>
 
 </Project>
