--- a/Modules/Notes/Notes.API/Notes.API.csproj
+++ b/Modules/Notes/Notes.API/Notes.API.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BuildingBlocks\BuildingBlocks.csproj" />
+      <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.csproj" />
       <ProjectReference Include="..\Notes.Domain\Notes.Domain.csproj" />
       <ProjectReference Include="..\Notes.Infrastructure\Notes.Infrastructure.csproj" />
       <ProjectReference Include="..\Notes.Shared\Notes.Shared.csproj" />
